# OFARCHDesk-Cliente001

./: Cargo.toml  build.py  custom.py
.github/workflows/: flutter-build.yml
flutter/lib/: common.dart
flutter/lib/common/widgets/: dialog.dart  toolbar.dart
flutter/lib/desktop/pages/: desktop_home_page.dart  desktop_setting_page.dart  install_page.dart
flutter/lib/models/: native_model.dart  platform_model.dart
flutter/windows/runner/: Runner.rc
libs/portable/: Cargo.toml  app_metadata.toml  build.rs
libs/portable/src/: main.rs
src/: main.rs  ui.rs
src/client/: io_loop.rs
src/lang/: es.rs
src/platform/: windows.rs
src/ui/: cm.tis  common.css  index.css  index.tis
