[package]
name = "OFARCHDesk-portable-packer"
version = "1.4.1"
authors = ["OFARCH <soporte@ofarch.co>"]
edition = "2021"
description = "OFARCH Soporte Remoto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
brotli = "3.4"
dirs = "5.0"
md5 = "0.7"
winapi = { version = "0.3", features = ["winbase"] }

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = {version = "1.0", default-features = false, features = ["animation-timer", "image-decoder"]}

[package.metadata.winres]
CompanyName = "OFARCH S.A.S."
LegalCopyright = "Todos los derechos reservados &copy; OFARCH S.A.S. 2025"
ProductName = "OFARCHDesk"
FileDescription = "OFARCH Soporte Remoto"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winnt", "pdh", "synchapi" ] }


